--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <p>Privacy</p>
         </div>
         <div class="both">
-          <h3>Language</h3>
+          <h3>Languagesss </h3>
           <button> English</button>
         </div>
       </div>
