assets name changed

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
   <div class="page-2">
     <div class="img-1">
-      <img src="./assets/p1.png" alt="picture 1" id="im1" />
+      <img src="./assets/umbrella.png" alt="picture 1" id="im1" />
       <div>
         <h1 id="h-1">THE BEST LUXURY HOTELS</h1>
       </div>
@@ -56,7 +56,7 @@
       </div>
     </div>
     <div class="img-2">
-      <img src="./assets/p2.jpg" alt="picture 2" id="im2" />
+      <img src="./assets/anchor.jpg" alt="picture 2" id="im2" />
       <div>
         <h1 id="h-2">NEW EXPERIENCES</h1>
       </div>
@@ -68,7 +68,7 @@
       </div>
     </div>
     <div class="img-3">
-      <img src="./assets/p3.png" alt="picture 3" id="im3" />
+      <img src="./assets/wallet.png" alt="picture 3" id="im3" />
       <div>
         <h3 id="h-3">EXCLUSIVE RATES</h3>
       </div>
@@ -90,51 +90,51 @@
     <div class="img-container">
       <div class="section-1">
         <div class="img-wrapper">
-          <img src="./assets/s1.jpg">
+          <img src="./assets/swimming.jpg">
           <button class="center-button">SNORKELING</button>
           <div class="img-overlay"></div>
         </div>
         <div class="img-wrapper">
-          <img src="./assets/m1.jpg">
+          <img src="./assets/massage.jpg">
           <button class="center-button">MASSAGE</button>
           <div class="img-overlay"></div>
         </div>
         <div class="img-wrapper">
-          <img src="./assets/h1.jpg" alt="" />
+          <img src="./assets/hiking.jpg" alt="" />
           <button class="center-button">HIKING</button>
           <div class="img-overlay"></div>
         </div>
       </div>
       <div class="section-2">
         <div class="img-wrapper">
-          <img src="./assets/t3.webp" alt="" />
+          <img src="./assets/tree.webp" alt="" />
           <button class="center-button">TOUR</button>
           <div class="img-overlay"></div>
         </div>
         <div class="img-wrapper">
-          <img src="./assets/g1.jpg" alt="" />
+          <img src="./assets/cheif.jpg" alt="" />
           <button class="center-button">GASTRONOMY</button>
           <div class="img-overlay"></div>
         </div>
         <div class="img-wrapper">
-          <img src="./assets/sh1.jpg" alt="" />
+          <img src="./assets/shopping.jpg" alt="" />
           <button class="center-button">SHOPPING</button>
           <div class="img-overlay"></div>
         </div>
       </div>
       <div class="section-3">
         <div class="img-wrapper">
-          <img src="./assets/w2.jpg" alt="" />
+          <img src="./assets/walking.jpg" alt="" />
           <button class="center-button">WALKING</button>
           <div class="img-overlay"></div>
         </div>
         <div class="img-wrapper">
-          <img src="./assets/f2.jpg" alt="" />
+          <img src="./assets/fitness.jpg" alt="" />
           <button class="center-button">FITNESS</button>
           <div class="img-overlay"></div>
         </div>
         <div class="img-wrapper">
-          <img src="./assets/r1.jpg" alt="" />
+          <img src="./assets/reading.jpg" alt="" />
           <button class="center-button">READING</button>
           <div class="img-overlay"></div>
         </div>
@@ -154,7 +154,7 @@
           <h1 id="h-1">1.</h1>
         </div>
         <div>
-          <img src="./assets/a1.png" alt="picture 1" id="im1" />
+          <img src="./assets/hammer.png" alt="picture 1" id="im1" />
           <p id="p-1">
             Appointment every Wednesday 9am.
           </p>
